# asyncweb

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  exports.sh  flask_login_exp.py  pyproject.toml  pytest.ini  quick_start.sh  requirements.txt  requirements_dev.txt  run.sh  setup.py
Nginx/: http.conf  https.conf
app/: app.py  main.py
app/api/: crud.py
app/server/auth/: admin.py  jwt_bearer.py  jwt_handler.py
app/server/database/: database.py  database_helper.py
app/server/models/: admin.py  notes.py  student.py
app/server/routes/: admin.py  db_operations.py  notes.py  student.py
sql/: schema.base.sql
src/: Dockerfile  __init__.py  configuration.py  main.py  pyproject.toml  server.py
src/api/: crud.py  db.py  db_operations.py  logger.py  login.py  models.py  notes.py  notes_crud.py  user.py  users.py  users_crud.py  users_db_ops.py
src/app/: main.py
src/app/api/: crud.py  models.py  notes.py
src/auth/: access_token.py  jwtRS256_private.pem  jwtRS256_public.pem  token.py
src/conf/: __init__.py  conf.json  nginx.conf
src/db/: __init__.py  base.py  crud.py  notes_db.py  notes_db_ops.py  sql_trial.py  t.py  user_crud.py  users_db.py  users_db_ops.py
src/routes/: __init__.py  login.py  notes.py  users.py
src/tests/: test_notes.py
src/utils/: auth.py  deps.py  email_util.py  logger.py  models.py  response_schemas.py
temp/: crud.py  database.py  fastapi_login_exp.py  fastapi_login_trial.py  flask_login_exp.py  main.py  models.py  schemas.py  sql_app.db
templates/: login.html
test/: __init__.py  test_notes.py  test_ping.py  test_users.py  test_users_1.py
