[tool.poetry]
name = "asyncweb"
version = "0.1.0"
description = "Simple Async REST webapp"
authors = ["amit-bakhru <bakhru@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorlog = "^4.0.2"
click = "^7.0"
python-dateutil = "^2.8.1"
requests = "^2.20.0"
pyquery = "^1.4.1"
parse = "^1.12.1"
psycopg2 = "^2.8.4"
fastapi = "^0.45.0"
uvicorn = "^0.10.8"
pandas = "^0.25.3"
tabulate = "^0.8.6"
httpie = "^2.0.0"
app = {path = "src", develop=true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
pytest-instafail = "^0.4.1"
pytest-picked = "^0.4.1"
pytest-tldr = "^0.2.1"
bandit = "^1.6.2"
black = "^19.10b0"
parameterized = "^0.7.1"

[tool.bandit]
targets = ["src"]
skips = ["B101", "B110"]

[tool.black]
line-length = 100
target-version = ['py38']
skip-string_normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
     .eggs         # exclude a few common directories in the
    | \.git        # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.idea
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
verbose = true

[build-system]
requires = ["poetry>=1.0", "pip>=19.3.1", "setuptools>=45.0.0"]
build-backend = "poetry.masonry.api"
