[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["amit-bakhru <bakhru@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncpg = "^0.20.1"
sqlalchemy = "^1.3.12"
databases = "^0.2.6"
fastapi = "^0.45.0"
uvicorn = "^0.10.8"
psycopg2 = "^2.8.4"
requests = "^2.22.0"
pydantic = "^1.3"
email-validator = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0", "pip>=19.3.1", "setuptools>=45.0.0"]
build-backend = "poetry.masonry.api"
